--- a/package.json
+++ b/package.json
@@ -20,18 +20,30 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.18.0",
+    "@ionic-native/core": "^4.20.0",
     "@ionic-native/date-picker": "^4.18.0",
     "@ionic-native/facebook": "^4.18.0",
     "@ionic-native/google-plus": "^4.18.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic-native/twitter-connect": "^4.18.0",
+    "@ionic-native/youtube-video-player": "^5.0.0",
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.1",
+    "cordova": "^8.1.2",
+    "cordova-android": "7.1.4",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "4.0.0",
     "cordova-plugin-googleplus": "6.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.3.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-youtube-video-player": "2.3.0",
     "firebase": "^5.7.2",
+    "ionic": "^4.9.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -40,7 +52,8 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.1",
+    "@ionic/app-scripts": "^3.2.2",
+    "@ionic/cli-plugin-proxy": "1.5.8",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -51,7 +64,19 @@
       },
       "twitter-connect-plugin": {
         "FABRIC_KEY": "cb32287a03457ff6cdefd66a3dbe9d93a97491fb"
-      }
-    }
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
   }
 }
