--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/facebook": "^4.18.0",
     "@ionic-native/google-plus": "^4.18.0",
     "@ionic-native/splash-screen": "~4.18.0",
-    "@ionic-native/status-bar": "~4.18.0",
+    "@ionic-native/status-bar": "^4.18.0",
     "@ionic-native/twitter-connect": "^4.18.0",
     "@ionic-native/youtube-video-player": "^5.0.0",
     "@ionic/storage": "2.2.0",
