--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/twitter-connect": "^4.18.0",
     "@ionic-native/youtube-video-player": "^5.0.0",
     "@ionic/storage": "2.2.0",
+    "angular-svg-round-progressbar": "^2.0.0",
     "angularfire2": "^5.1.1",
     "chart.js": "^2.7.3",
     "cordova": "^8.1.2",
@@ -47,6 +48,7 @@
     "ionic": "^4.9.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ng-circle-progress": "^1.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "twitter-connect-plugin": "0.6.0",
@@ -54,7 +56,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.2",
-    "@ionic/cli-plugin-proxy": "1.5.8",
+    "@ionic/cli-plugin-proxy": "^1.5.9",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
