--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
+    "@angular/cli": "^7.3.8",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^7.2.12",
     "@angular/compiler-cli": "^7.2.9",
-    "@angular/core": "5.2.11",
+    "@angular/core": "^6.1.10",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "^4.20.0",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
+    "@ionic-native/app-version": "^4.8.0",
+    "@ionic-native/core": "^5.4.0",
     "@ionic-native/date-picker": "^4.18.0",
     "@ionic-native/facebook": "^4.18.0",
     "@ionic-native/google-plus": "^4.18.0",
     "@ionic-native/splash-screen": "~4.18.0",
-    "@ionic-native/status-bar": "^4.18.0",
+    "@ionic-native/status-bar": "^5.4.0",
     "@ionic-native/twitter-connect": "^4.18.0",
     "@ionic-native/youtube-video-player": "^5.0.0",
     "@ionic/storage": "2.2.0",
@@ -35,11 +37,12 @@
     "cordova": "^8.1.2",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "4.0.0",
-    "cordova-plugin-googleplus": "6.0.0",
+    "cordova-plugin-googleplus": "^6.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.2",
+    "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -48,15 +51,20 @@
     "ionic": "^4.9.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "karma": "^4.0.1",
     "ng-circle-progress": "^1.0.0",
-    "rxjs": "5.5.11",
+    "rebuild": "^0.1.2",
+    "rxjs": "^5.5.12",
     "sw-toolbox": "3.6.0",
-    "twitter-connect-plugin": "0.6.0",
+    "twitter-connect-plugin": "^0.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.2",
+    "@ionic/app-scripts": "^3.2.3",
     "@ionic/cli-plugin-proxy": "^1.5.9",
+    "@types/jest": "^24.0.11",
+    "jest": "^24.7.1",
+    "ts-jest": "^24.0.2",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -75,7 +83,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "android",
